--- a/api-web/src/main/resources/application-prod.yaml
+++ b/api-web/src/main/resources/application-prod.yaml
@@ -2,15 +2,40 @@ debug: false
 # 日志
 logging:
   pattern:
-    level: warn
+    level: debug
 # 数据源
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:p6spy:mysql://192.168.10.166:3306/vcloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
-    username: ENC(9VSppGu84t6XdB3Tb6Ep2A==)
-    password: ENC(n8Y4oU0oKmpu4FwhLYif3g==)
+    url: jdbc:p6spy:mysql://192.168.10.166:12306/jxc?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
+    username: ENC(m7znO0dJTuxxjJT1KQGOGQ==)
+    password: ENC(m7znO0dJTuxxjJT1KQGOGQ==)
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+  hikari:
+    minimum-idle: 3
+    maximum-pool-size: 10
+    max-lifetime: 3000
+    connection-test-query: select 1
   devtools:
     livereload:
-      enabled: false
+      enabled: true
+    restart:
+      additional-paths: src/main/java
+# redis 配置
+  redis:
+    host: 192.168.10.166
+    port: 6379
+    password: 8i9o0p
+    timeout: 10000
+    database: 0
+# 校验表结构
+  jpa:
+    hibernate:
+      ddl-auto: none
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+cache:
+  type: redis
+  cache-names: sys
+jwt:
+  cookie:
+    maxAge: 3600
