--- a/api-web/src/main/resources/application-prod.yaml
+++ b/api-web/src/main/resources/application-prod.yaml
@@ -2,14 +2,17 @@ debug: false
 # 日志
 logging:
   pattern:
-    level: debug
+    level: WARN
+  # 日志文件配置
+  file:
+    path: /opt/data/logs/webapp.log
 # 数据源
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:p6spy:mysql://192.168.10.166:12306/jxc?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
-    username: ENC(m7znO0dJTuxxjJT1KQGOGQ==)
-    password: ENC(m7znO0dJTuxxjJT1KQGOGQ==)
+    url: jdbc:p6spy:mysql://182.61.49.92:12306/eva?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
+    username: eva
+    password: eva666
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
   hikari:
     minimum-idle: 3
@@ -21,21 +24,27 @@ spring:
       enabled: true
     restart:
       additional-paths: src/main/java
-# redis 配置
+  # redis 配置
   redis:
-    host: 192.168.10.166
+    host: 182.61.49.92
     port: 6379
     password: 8i9o0p
     timeout: 10000
     database: 0
-# 校验表结构
+  # 校验表结构
   jpa:
     hibernate:
       ddl-auto: none
     database-platform: org.hibernate.dialect.MySQL5Dialect
-cache:
-  type: redis
-  cache-names: sys
+    open-in-view: false
+  # 生产环境禁用flyway
+  flyway:
+    enabled: false
 jwt:
+  # 图片上传
+  upload:
+    tempPath: E://evapic/temp
+    storagePath: E://evapic/storage
+    allowSuffixName: jpg,png,jpeg
   cookie:
     maxAge: 3600
