--- a/api-web/src/main/resources/application.yaml
+++ b/api-web/src/main/resources/application.yaml
@@ -33,39 +33,73 @@ mybatis-plus:
 #      字段策略
 #      驼峰下划线转换
       table-underline: true
-      logic-delete-value: '0000' # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: '0001' # 逻辑未删除值(默认为 0)
+      logic-delete-value: '0001' # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: '0000' # 逻辑未删除值(默认为 0)
+      select-strategy: not_empty
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
     log-impl: org.apache.ibatis.logging.nologging.NoLoggingImpl
-# JWT配置
-jwt:
-  header: Authorization
-  token-head: Bearer
-  sign: PKAQ
-  secert: aHR0cDovL3BrYXEub3Jn
-  ttl: 2592000000
-  threshold: 86400000
 # 配置加密
 jasypt:
   encryptor:
-    password: eva
+    password: ::eva
 # server配置
 server:
   servlet:
     context-path: /api
   port: 9009
-  tomcat:
-    uri-encoding: utf-8
+# 微信配置
+wechat:
+  pay:
+    appId: wxefdd141dc453eec5
+    mchId: 1561278171
+    mchKey: c180aaadf5ab10fb3a733f43f3ffc4b3
+    # p12证书的位置，可以指定绝对路径，也可以指定类路径（以classpath:开头）
+    keyPath: classpath:cert/apiclient_cert.p12
+  mp:
+    configs:
+#      - appId: wxefdd141dc453eec5
+#        secret : b924bc4582c280826fce5575b0b93389
+#        token: relax
+#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
+#      - appId: wxfd7f50aa599242f8
+#        secret: dd24c23ff8e61fa261307f47d9962dc5
+#        token: nerv
+#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
+      - appId: wx12b27a68cc6951da
+        secret: 5581e5364618a666ffbbb36dfd56d3fe
+#        token: nerv
+#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
 # 业务日志
-bizlog:
-  enabled: true
-  impl: MybatisSupporter
-# 图片上传
-upload:
-  tempPath: E://temp/11
-  storagePath: E://temp/22
-  allowSuffixName: jpg,png
-security:
-  permit: /auth/login, /auth/logout
+eva:
+  # 数据权限
+  datapermission:
+  # 是否开启数据权限控制
+    enable: true
+  # 需要排除的表
+    exclude-tables: sys_module_resources,sys_role_user
+  # 缓存配置
+  cache:
+    timeout: 500
+    type: redis
+  # 错误日志
+  errorlog:
+    enabled: true
+  # 业务日志
+  bizlog:
+    enabled: true
+    impl: MybatisSupporter
+  # JWT配置
+  jwt:
+    header: Authorization
+    token-head: Bearer
+    sign: PKAQ
+    secert: aHR0cDovL3BrYXEub3Jn
+    ttl: 2592000000
+    threshold: 86400000
+  security:
+    # 无需鉴权路径(无条件访问)
+    anonymous: /auth/login,/auth/logout,/wx/portal/**,/wx/redirect/**,/wx/pay/**
+    # 无需资源鉴权的路径
+    permit: /auth/**,/wx/portal,/wx/redirect,/wx/pay
