--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "web"]
 	path = web
-	url = ssh://git@140.143.22.148:10022/EVA/TEMPLATE-WEB.git
+	url = ssh://git@192.168.10.166:10022/Baseline/Template-Web.git
