--- a/api-web/src/main/resources/application-prod.yaml
+++ b/api-web/src/main/resources/application-prod.yaml
@@ -3,6 +3,7 @@ debug: false
 logging:
   pattern:
     level: WARN
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%thread]){faint} %clr(%-40.40logger{39}){cyan} %L %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
   # 日志文件配置
   file:
     path: /opt/data/logs/webapp.log
