--- a/api-web/src/main/resources/application.yaml
+++ b/api-web/src/main/resources/application.yaml
@@ -24,7 +24,6 @@ spring:
 mybatis-plus:
   mapper-locations: classpath*:/mapper/*.xml
   #实体扫描，多个package用逗号或者分号分隔
-  //TODO 需要添加包扫描配置
   typeAliasesPackage: io.nerv.*.**.entity
   global-config:
 #      刷新mapper 调试神器
@@ -49,19 +48,101 @@ jasypt:
 server:
   servlet:
     context-path: /api
-  port: 9009
-# 业务日志
+  port: 9016
+# 微信配置
+wechat:
+  pay:
+    appId: wxefdd141dc453eec5
+    mchId: 1561278171
+    mchKey: c180aaadf5ab10fb3a733f43f3ffc4b3
+    # p12证书的位置，可以指定绝对路径，也可以指定类路径（以classpath:开头）
+    keyPath: classpath:cert/apiclient_cert.p12
+  mp:
+    configs:
+#      - appId: wxefdd141dc453eec5
+#        secret : b924bc4582c280826fce5575b0b93389
+#        token: relax
+#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
+#      - appId: wxfd7f50aa599242f8
+#        secret: dd24c23ff8e61fa261307f47d9962dc5
+#        token: nerv
+#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
+      - appId: wx12b27a68cc6951da
+        secret: 5581e5364618a666ffbbb36dfd56d3fe
+#        token: nerv
+#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
 eva:
+  norepeat-check: false
+  # 该配置必须在jwt配置前 30天有效
+  cookie:
+    maxAge: &maxAge 2592000
+  # JWT配置
+  jwt:
+    header: Authorization
+    token-head: Bearer
+    sign: PKAQ
+    secert: aHR0cDovL3BrYXEub3Jn
+    ttl: *maxAge
+    # 过期阈值 默认6小时
+    threshold: 21600000
+  # 访问权限
+  security:
+    # 无需鉴权路径(无条件访问)
+    anonymous: /auth/login,/auth/logout,/wx/**,/doc/**,/actuator/**
+    # 无需资源鉴权的路径
+    permit: /auth/**,/wx/**,/doc/**,/actuator/**,/license/**
+  # 资源权限
+  resource-permission:
+    # 是否启用
+    enable: true
+    # 是否采用严格鉴权模式
+    #    严格模式, 判断 登录角色 请求的资源 是否与 资源需要的角色 一致
+    #    * 一致 return 放行
+    #    * 不一致 抛出权限不足异常
+    #    简单模式 , 判断 登录角色 访问的资源 是否 需要鉴权(在的授权列表里)
+    #    * 存在 放行
+    #    * 不存在 返回权限不足
+    strict: false
   # 数据权限
   datapermission:
   # 是否开启数据权限控制
-    enable: true
+    enable: false
   # 需要排除的表
     exclude-tables: sys_module_resources,sys_role_user
   # 缓存配置
   cache:
-    timeout: 500
-    type: redis
+    type: caffeine
+    config:
+      - name: uploadfiles
+        spec: initialCapacity=100,expireAfterWrite=1d
+      - name: repeatsubmit
+        spec: initialCapacity=10,expireAfterAccess=1s
+      - name: dictdata
+        spec: initialCapacity=100
+      - name: bizdata
+        spec: initialCapacity=100,expireAfterAccess=1h
+      - name: token
+        spec: initialCapacity=100,expireAfterWrite=2592000s
+#    type: redis
+#    config:
+#        # 缓存名称 - 文件上传缓存
+#      - name: uploadfiles
+#        # 初始大小
+#        initialCapacity: 100
+#        # 过期时间(毫秒)
+#        secondsToExpire: 86400000
+#        # 重复提交缓存
+#      - name: repeatsubmit
+#        initialCapacity: 100
+#        secondsToExpire: 500
+#        # 字典缓存
+#      - name: dictdata
+#        initialCapacity: 100
+#        secondsToExpire: -1
+#        # 业务数据缓存
+#      - name: bizdata
+#        initialCapacity: 100
+#        secondsToExpire: 86400000
   # 错误日志
   errorlog:
     enabled: true
@@ -69,16 +150,15 @@ eva:
   bizlog:
     enabled: true
     impl: MybatisSupporter
-  # JWT配置
-  jwt:
-    header: Authorization
-    token-head: Bearer
-    sign: PKAQ
-    secert: aHR0cDovL3BrYXEub3Jn
-    ttl: 2592000000
-    threshold: 86400000
-  security:
-    # 无需鉴权路径(无条件访问)
-    anonymous: /auth/login,/auth/logout,/wx/**, /doc/**
-    # 无需资源鉴权的路径
-    permit: /auth/**,/wx/**,/doc/**
+  license:
+    enable: false
+    # 公钥别名
+    alias: publiccert
+    # 该密码是访问密钥库的密码 — 使用 keytool 生成密钥对时设置，使用者知道该密码
+    keystore_pwd: 7u8i9o0p
+    # 公共库路径（放在 resource 目录下
+    path: /license/publicCerts.store
+    # 证书路径（我这边配置在了 linux 根路径下，即 /license.lic ）
+    license: /license/license.lic
+    # 项目的唯一识别码
+    subject: eva
