--- a/api-web/src/main/resources/application.yaml
+++ b/api-web/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: dev
+    active: @profile@
   # flyway配置 对于非空数据库 需要开启此项避免报错
   flyway:
     baseline-on-migrate: true
@@ -11,6 +11,8 @@ spring:
   http:
     encoding:
       charset: UTF-8
+      force: true
+      enabled: true
   servlet:
   # 文件上传配置
     multipart:
@@ -94,7 +96,7 @@ eva:
   # 资源权限
   resource-permission:
     # 是否启用
-    enable: true
+    enable: false
     # 是否采用严格鉴权模式
     #    严格模式, 判断 登录角色 请求的资源 是否与 资源需要的角色 一致
     #    * 一致 return 放行
@@ -111,38 +113,41 @@ eva:
     exclude-tables: sys_module_resources,sys_role_user
   # 缓存配置
   cache:
-    type: caffeine
-    config:
-      - name: uploadfiles
-        spec: initialCapacity=100,expireAfterWrite=1d
-      - name: repeatsubmit
-        spec: initialCapacity=10,expireAfterAccess=1s
-      - name: dictdata
-        spec: initialCapacity=100
-      - name: bizdata
-        spec: initialCapacity=100,expireAfterAccess=1h
-      - name: token
-        spec: initialCapacity=100,expireAfterWrite=2592000s
-#    type: redis
+#    type: caffeine
 #    config:
-#        # 缓存名称 - 文件上传缓存
 #      - name: uploadfiles
-#        # 初始大小
-#        initialCapacity: 100
-#        # 过期时间(毫秒)
-#        secondsToExpire: 86400000
-#        # 重复提交缓存
+#        spec: initialCapacity=100,expireAfterWrite=1d
 #      - name: repeatsubmit
-#        initialCapacity: 100
-#        secondsToExpire: 500
-#        # 字典缓存
+#        spec: initialCapacity=10,expireAfterAccess=1s
 #      - name: dictdata
-#        initialCapacity: 100
-#        secondsToExpire: -1
-#        # 业务数据缓存
+#        spec: initialCapacity=100
 #      - name: bizdata
-#        initialCapacity: 100
-#        secondsToExpire: 86400000
+#        spec: initialCapacity=100,expireAfterAccess=1h
+#      - name: token
+#        spec: initialCapacity=100,expireAfterWrite=2592000s
+    type: redis
+    config:
+        # 缓存名称 - 文件上传缓存
+      - name: uploadfiles
+        # 初始大小
+        initialCapacity: 100
+        # 过期时间(毫秒)
+        secondsToExpire: 86400000
+        # 重复提交缓存
+      - name: repeatsubmit
+        initialCapacity: 100
+        secondsToExpire: 500
+        # 字典缓存
+      - name: dictdata
+        initialCapacity: 100
+        secondsToExpire: -1
+        # 业务数据缓存
+      - name: bizdata
+        initialCapacity: 100
+        secondsToExpire: 86400000
+      - name: token
+        initialCapacity: 1000
+        secondsToExpire: 2592000
   # 错误日志
   errorlog:
     enabled: true
