--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 plugins {
-    id "name.remal.check-dependency-updates" version "1.0.178"
+    id "name.remal.check-dependency-updates" version "${cdu_ver}"
+    id "io.spring.dependency-management" version "${spring_dep}"
+    id 'org.springframework.boot' version "${spring_boot_ver}"
 }
 
 ext {
-    eva = "2.5.2"
-    lombok = "1.18.12"
-    springBootVersion = '2.2.6.RELEASE'
-    securityTest = "5.3.1.RELEASE"
-
-    lib = ["core" : "io.nerv:eva-core:${eva}",
-           "auth" : "io.nerv:eva-auth:${eva}",
-           "lombok"   :  "org.projectlombok:lombok:${lombok}",
-           "devTools": "org.springframework.boot:spring-boot-devtools",
-           "processor"	 : "org.springframework.boot:spring-boot-configuration-processor",
-           // test
-           "test" : "org.springframework.boot:spring-boot-starter-test:${springBootVersion}",
+    lib = ["eva_core" : "io.nerv:eva-web-base:${eva}",
+           "eva_sys" : "io.nerv:eva-web-sys:${eva}",
+           "eva_auth" : "io.nerv:eva-web-auth:${eva}",
+           "eva_license" : "io.nerv:eva-core-license:${eva}",
+           "knife4j_ui" : "com.github.xiaoymin:knife4j-spring-boot-starter:${knife4j}",
+           "boot" : "org.springframework.boot:spring-boot-dependencies:${spring_boot_ver}",
+           "lombok" : "org.projectlombok:lombok:${lombok}",
+           "test" : "org.springframework.boot:spring-boot-starter-test",
            "securityTest" : "org.springframework.security:spring-security-test:${securityTest}",
+           "bootAdmin" : "de.codecentric:spring-boot-admin-starter-client:${boot_admin}",
+           "devTools" : "org.springframework.boot:spring-boot-devtools"
     ]
 }
 
@@ -27,9 +27,17 @@ allprojects {
 
 subprojects {
     apply plugin: 'java-library'
+    apply plugin: 'io.spring.dependency-management'
+
 
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
+
+    dependencyManagement {
+        imports {
+            mavenBom "${lib.boot}"
+        }
+    }
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
@@ -42,14 +50,21 @@ subprojects {
 
      repositories {
          mavenLocal()
-         maven { url"https://maven.springframework.org"}
-         maven { url"https://repo.spring.io/libs-release" }
-         maven { url"https://mirrors.huaweicloud.com" }
          jcenter()
          mavenCentral()
+         maven { url"https://maven.aliyun.com/repository/central" }
+         maven { url"https://maven.aliyun.com/repository/jcenter" }
+         maven { url"https://mirrors.huaweicloud.com" }
+         maven { url"https://maven.aliyun.com/repository/spring" }
+         maven { url"https://maven.aliyun.com/repository/spring-plugin" }
+         maven { url"https://maven.springframework.org"}
+         maven { url"https://repo.spring.io/libs-release" }
     }
 
     dependencies {
+        implementation  "${lib.eva_core}",
+                        "${lib.knife4j_ui}"
+
         implementation "${lib.lombok}"
         annotationProcessor "${lib.lombok}"
 
