--- a/api-web/build.gradle
+++ b/api-web/build.gradle
@@ -15,11 +15,11 @@ compileJava.dependsOn(processResources)
 
 processResources {
 	println "==> Load configuration for $profile"
+	duplicatesStrategy = DuplicatesStrategy.INCLUDE
 
 	from(sourceSets.main.resources.srcDirs) {
 		filter(ReplaceTokens, tokens: [profile: profile])
 	}
-
 }
 
 dependencies {
