--- a/api-web/src/main/resources/application.yaml
+++ b/api-web/src/main/resources/application.yaml
@@ -5,16 +5,10 @@ spring:
   flyway:
     baseline-on-migrate: true
     locations: classpath:/db/migration
-    check-location: false
     baseline-version: 0
-  # 编码
-  http:
-    encoding:
-      charset: UTF-8
-      force: true
-      enabled: true
+    enabled: false
   servlet:
-  # 文件上传配置
+    # 文件上传配置
     multipart:
       enabled: true
       max-file-size: 10MB
@@ -22,22 +16,33 @@ spring:
   # 国际化配置
   messages:
     basename: i18n/i18n
+  jackson:
+    #日期格式化
+    date-format: yyyy-MM-dd HH:mm:ss
+    # 时区
+    time-zone: GMT+8
+    default-property-inclusion: always
+    serialization:
+      WRITE_DATES_AS_TIMESTAMPS: false
+      #格式化输出
+      indent_output: true
 # mybatis
 mybatis-plus:
   mapper-locations: classpath*:/mapper/*.xml
   #实体扫描，多个package用逗号或者分号分隔
   typeAliasesPackage: io.nerv.*.**.entity
   global-config:
-#      刷新mapper 调试神器
+    #      刷新mapper 调试神器
     refresh: true
     db-config:
       id-type: uuid
-#      字段策略
-#      驼峰下划线转换
+      #      字段策略
+      #      驼峰下划线转换
       table-underline: true
       logic-delete-value: '0001' # 逻辑已删除值(默认为 1)
       logic-not-delete-value: '0000' # 逻辑未删除值(默认为 0)
       select-strategy: not_empty
+    banner: false
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
@@ -50,6 +55,13 @@ jasypt:
 server:
   servlet:
     context-path: /api
+    #  2.3.0 新支持, 优雅关机
+    shutdown: graceful
+    # 编码
+    encoding:
+      charset: utf-8
+      enabled: true
+      force: true
   port: 9016
 # 微信配置
 wechat:
@@ -61,14 +73,14 @@ wechat:
     keyPath: classpath:cert/apiclient_cert.p12
   mp:
     configs:
-#      - appId: wxefdd141dc453eec5
-#        secret : b924bc4582c280826fce5575b0b93389
-#        token: relax
-#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
-#      - appId: wxfd7f50aa599242f8
-#        secret: dd24c23ff8e61fa261307f47d9962dc5
-#        token: nerv
-#        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
+      #      - appId: wxefdd141dc453eec5
+      #        secret : b924bc4582c280826fce5575b0b93389
+      #        token: relax
+      #        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
+      #      - appId: wxfd7f50aa599242f8
+      #        secret: dd24c23ff8e61fa261307f47d9962dc5
+      #        token: nerv
+      #        aesKey: DHFzG3nOljaZ6DZiaHOFzizWzVL1XvlGISKTCtvbS1T
       - appId: wx12b27a68cc6951da
         secret: 5581e5364618a666ffbbb36dfd56d3fe
 #        token: nerv
@@ -80,15 +92,22 @@ eva:
     maxAge: &maxAge 2592000
   # JWT配置
   jwt:
+    # 是否持久化token
+    persistence: false
     header: Authorization
     token-head: Bearer
     sign: PKAQ
-    secert: aHR0cDovL3BrYXEub3Jn
+    secert: 6MNSobBRCHGIO0fS6MNSobBRCHGIO0fS
     ttl: *maxAge
+    # 6 小时
+    alphaTtl: 21600000
+    # 30 天
+    bravoTtl: 2592000000
     # 过期阈值 默认6小时
     threshold: 21600000
   # 访问权限
   security:
+    webstatic:
     # 无需鉴权路径(无条件访问)
     anonymous: /auth/login,/auth/logout,/wx/**,/doc/**,/actuator/**
     # 无需资源鉴权的路径
@@ -107,47 +126,47 @@ eva:
     strict: false
   # 数据权限
   datapermission:
-  # 是否开启数据权限控制
+    # 是否开启数据权限控制
     enable: false
-  # 需要排除的表
+    # 需要排除的表
     exclude-tables: sys_module_resources,sys_role_user
   # 缓存配置
   cache:
-#    type: caffeine
-#    config:
-#      - name: uploadfiles
-#        spec: initialCapacity=100,expireAfterWrite=1d
-#      - name: repeatsubmit
-#        spec: initialCapacity=10,expireAfterAccess=1s
-#      - name: dictdata
-#        spec: initialCapacity=100
-#      - name: bizdata
-#        spec: initialCapacity=100,expireAfterAccess=1h
-#      - name: token
-#        spec: initialCapacity=100,expireAfterWrite=2592000s
-    type: redis
+    type: caffeine
     config:
-        # 缓存名称 - 文件上传缓存
       - name: uploadfiles
-        # 初始大小
-        initialCapacity: 100
-        # 过期时间(毫秒)
-        secondsToExpire: 86400000
-        # 重复提交缓存
+        spec: initialCapacity=100,expireAfterWrite=1d
       - name: repeatsubmit
-        initialCapacity: 100
-        secondsToExpire: 500
-        # 字典缓存
+        spec: initialCapacity=10,expireAfterAccess=1s
       - name: dictdata
-        initialCapacity: 100
-        secondsToExpire: -1
-        # 业务数据缓存
+        spec: initialCapacity=100
       - name: bizdata
-        initialCapacity: 100
-        secondsToExpire: 86400000
+        spec: initialCapacity=100,expireAfterAccess=1h
       - name: token
-        initialCapacity: 1000
-        secondsToExpire: 2592000
+        spec: initialCapacity=100,expireAfterWrite=2592000s
+  #    type: redis
+  #    config:
+  #        # 缓存名称 - 文件上传缓存
+  #      - name: uploadfiles
+  #        # 初始大小
+  #        initialCapacity: 100
+  #        # 过期时间(毫秒)
+  #        secondsToExpire: 86400000
+  #        # 重复提交缓存
+  #      - name: repeatsubmit
+  #        initialCapacity: 100
+  #        secondsToExpire: 500
+  #        # 字典缓存
+  #      - name: dictdata
+  #        initialCapacity: 100
+  #        secondsToExpire: -1
+  #        # 业务数据缓存
+  #      - name: bizdata
+  #        initialCapacity: 100
+  #        secondsToExpire: 86400000
+  #      - name: token
+  #        initialCapacity: 1000
+  #        secondsToExpire: 2592000
   # 错误日志
   errorlog:
     enabled: true
