--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,12 @@
-profile=dev
+profile=aliyun
 
-spring_dep=1.0.11.RELEASE
-eva=2.6.9
-cdu_ver=1.3.1
-spring_boot_ver=2.5.1
-lombok=1.18.20
-boot_admin=2.3.0
-securityTest=5.5.0
-knife4j=3.0.2
+eva=2.7.4
+spring_dep=1.0.13.RELEASE
+spring_boot_ver=2.7.3
+mysql=8.0.30
+lombok=1.18.24
+knife4j=3.0.3
+springdoc=1.6.11
 
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 systemProp.file.encoding=UTF-8
